spring-main/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-main-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: spring-main
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: spring-main
    spec:
      containers:
        - name: spring-main
          image: cuonglyy/spring-main
          ports:
            - containerPort: 8080
