spring-main/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spring-main
  namespace: default
  labels:
    name: spring-main
spec:
  containers:
    - image: cuonglyy/spring-main:v1
      name: spring-main
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
