spring-main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-main-service
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: spring-main
  sessionAffinity: ClientIP
